- updated the code editor (visual aspec mostly)  * better layout support  * fixed / improved css styling  * fixed a few scrollbar issues

--- a/assets/css/editor.css
+++ b/assets/css/editor.css
@@ -53,11 +53,11 @@ text-shadow: 0 1px 0 white;
 .ui-resizable-e {
   right: 0;
 }
-/*
+
 .ui-resizable { position: relative;}
 .ui-resizable-handle { position: absolute;font-size: 0.1px; display: block; }
 .ui-resizable-disabled .ui-resizable-handle, .ui-resizable-autohide .ui-resizable-handle { display: none; }
-.ui-resizable-n { cursor: n-resize; height: 7px; width: 100%; top: -5px; left: 0; }
+/*.ui-resizable-n { cursor: n-resize; height: 7px; width: 100%; top: -5px; left: 0; }
 .ui-resizable-s { cursor: s-resize; height: 7px; width: 100%; bottom: -5px; left: 0; }
 .ui-resizable-e { cursor: e-resize; width: 7px; right: -5px; top: 0; height: 100%; }
 .ui-resizable-w { cursor: w-resize; width: 7px; left: -5px; top: 0; height: 100%; }
@@ -132,10 +132,33 @@ ui-icon ui-icon-closethick .ui-state-hover
 }
 
 
-
+/*layout*/
+.ui-layout-pane
+{
+	/*background-color: #FF0000 !important;*/
+	overflow-y: hidden !important;
+	padding:4px !important;
+}
 
 /*-------------------------------------*/		
 /*Code Editor*/
+
+.fileTab 
+{
+	
+}
+
+.nav
+{
+	margin-bottom: 2px;
+}
+
+.nav-tabs > li > a
+{
+	padding-bottom: 2px;
+	padding-top: 2px;
+}
+
 
 .CodeMirror {
 	/*top: 0;
@@ -152,7 +175,7 @@ ui-icon ui-icon-closethick .ui-state-hover
 {
         height: 100%;
         min-height:500px;
-        overflow-y: hidden;
+        overflow-y: auto;
         overflow-x: auto;
 }
 
@@ -327,7 +350,8 @@ legend + .control-group
 }
 
 body {
-        padding-top: 60px;
+        /*padding-top: 60px;*/
+        height:100%;
 	
 	/*background-color:#222222;#39464e;*/
 	/*
